# PitchPPT

./: .gitignore  LICENSE  PitchPPT.spec  README.md  README.zh-CN.md  create_github_release.ps1  pyproject.toml  requirements.txt  version.txt
docs/: ALGORITHM.md  ALGORITHM.zh-CN.md  FAQ.md  FAQ.zh-CN.md  TROUBLESHOOTING.md  TROUBLESHOOTING.zh-CN.md
resources/: LOGO.eps  style.qss
src/: main.py
src/core/: __init__.py  converter.py  progress_tracker.py  smart_config.py  smart_optimizer_v4.py  smart_optimizer_v5.py  smart_optimizer_v6.py  smart_optimizer_v7.py  smart_optimizer_v8.py  win32_converter.py
src/ui/: __init__.py  batch_conversion_worker.py  fixed_main_window.py  main_window.py  smart_config_widget.py  smart_optimization_worker_v4.py
src/utils/: __init__.py  config_manager.py  error_handler.py  history_manager.py  logger.py
tests/: __init__.py  check_ppt_file.py  compatible_converter.py  debug_components.py  debug_dpi.py  diagnose_powerpoint.py  minimal_app.py  new_main_window.py  qt_main_window.py  run_tests.py  safe_test.py  test_conversion_flow.py  test_converter.py  test_integration.py  test_smart_config.py  test_smart_config_integration.py  test_smart_config_new.py  test_step3_minimal.py  test_ui.py  validate_fix.py
